--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Signika:wght@400;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Signika:wght@400;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
 @import "tailwindcss";
 
@@ -7,7 +11,12 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme {
-  --font-testingg: 'Signika', sans-serif;
+  --font-signika: "Signika", sans-serif;
+  --font-cinzel: "Cinzel", serif;
+  --font-cormorant: "Cormorant Garamond", serif;
+  --font-imfell: "IM Fell English SC", serif;
+  --font-playfair: "Playfair Display", serif;
+  --color-title: #FED550;
 }
 
 :root {
